# audio_analysis_node

./: CMakeLists.txt  package.xml  setup.py
msg/: AudioFeatures.msg  AudioRaw.msg  Prediction.msg
scripts/: app.py  audio_processor.py  mock_publisher.py  predicter.py  run_audio_processor.sh  run_predicter.sh
src/audio_processing/: utils.py
src/audio_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
